<resources>
    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="enter_your_scholar_id_string">Enter YourScholar ID</string>
    <string name="label_string">Scholar ID</string>
    <string name="button_string">Continue</string>
    <string name="let_s_you_in_string">Lets you in</string>
    <string name="or_string">Or</string>
    <string name="button_ek1_string">Sign in with password</string>
    <string name="don_t_have_an_account__sign_up_string">Dont have an account? Sign up</string>
    <string name="create_your_account_string">Create your Account</string>
    <string name="label_ek1_string">Email</string>
    <string name="label_ek2_string">Password</string>
    <string name="remember_me_string">Remember me</string>
    <string name="button_ek2_string">Sign up</string>
    <string name="or_continue_with_string">Or continue with</string>
    <string name="don_t_have_an_account__sign_up_ek1_string">Dont have an account? Sign up</string>
    <string name="login_to_your_account_string">Login to yourAccount</string>
    <string name="label_ek3_string">Email</string>
    <string name="label_ek4_string">Password</string>
    <string name="remember_me_ek1_string">Remember me</string>
    <string name="forgot_password__string">Forgot Password?</string>
    <string name="button_ek3_string">Sign up</string>
    <string name="or_continue_with_ek1_string">Or continue with</string>
    <string name="don_t_have_an_account__sign_up_ek2_string">Dont have an account? Sign up</string>
    <string name="create_your_account_ek1_string">Create your Account</string>
    <string name="label_ek5_string">UserUser@gmail.com</string>
    <string name="label_ek6_string">********</string>
    <string name="remember_me_ek2_string">Remember me</string>
    <string name="button_ek4_string">Sign up</string>
    <string name="or_continue_with_ek2_string">Or continue with</string>
    <string name="don_t_have_an_account__sign_up_ek3_string">Dont have an account? Sign up</string>
    <string name="congratulations__string">Congratulations!</string>
    <string name="your_account_is_ready_to_use_you_will_be_redirected_to_the_home_page_in_a_few_seconds__string">Your account is ready to use you willbe redirected to the home page in a few seconds.</string>
    <string name="forgot_password_string">Forgot Password</string>
    <string name="code_has_been_send_to__216_55_00_string">Code has been send to +216 55         00 </string>
    <string name="_5_string">5</string>
    <string name="_5_ek1_string">9</string>
    <string name="_5_ek2_string">4</string>
    <string name="_5_ek3_string">6</string>
    <string name="resend_code_in_45_sec_string">Resend code in 45 sec</string>
    <string name="button_ek5_string">Verify</string>
    <string name="create_new_password_string">Create New Password</string>
    <string name="create_your_new_password_string">Create your new password</string>
    <string name="label_ek7_string">********</string>
    <string name="label_ek8_string">********</string>
    <string name="remember_me_ek3_string">Remember me</string>
    <string name="button_ek6_string">Continue</string>
    <string name="search_courses__quizzes__grades____string">Search courses, quizzes, grades...</string>
    <string name="assignments_string">Assignments</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_string">10:40 AM</string>
    <string name="activities_string">Activities</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__ek1_string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_ek1_string">10:40 AM</string>
    <string name="events_string">Events</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__ek2_string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_ek2_string">10:40 AM</string>
    <string name="opportunities_string">Opportunities</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__ek3_string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_ek3_string">10:40 AM</string>
    <string name="good_morning___string">Good morning</string>
    <string name="foulen_ben_foulen_string">Foulen ben foulen</string>
    <string name="quizzes_string">Quizzes</string>
    <string name="courses_string">Courses</string>
    <string name="profile_string">Profile</string>
    <string name="discover_string">Discover</string>
    <string name="search_courses__quizzes__grades____ek1_string">Search courses, quizzes, grades...</string>
    <string name="assignments_ek1_string">Assignments</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__ek4_string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_ek4_string">10:40 AM</string>
    <string name="activities_ek1_string">Activities</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__ek5_string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_ek5_string">10:40 AM</string>
    <string name="events_ek1_string">Events</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__ek6_string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_ek6_string">10:40 AM</string>
    <string name="opportunities_ek1_string">Opportunities</string>
    <string name="history_essay_due_friday__april_5th__make_sure_to_include_citations__ek7_string">History essay due Friday, April 5th.Make sure to include citations!</string>
    <string name="_10_40_am_ek7_string">10:40 AM</string>
    <string name="good_morning___ek1_string">Good morning</string>
    <string name="foulen_ben_foulen_ek1_string">Foulen ben foulen</string>
    <string name="quizzes_ek1_string">Quizzes</string>
    <string name="courses_ek1_string">Courses</string>
    <string name="profile_ek1_string">Profile</string>
    <string name="discover_ek1_string">Discover</string>
    <string name="foulen_elflouleni_string">foulen elflouleni </string>
    <string name="logout_string">Logout</string>
    <string name="home_string">Home</string>
    <string name="courses_ek2_string">Courses</string>
    <string name="timetable_string">Timetable</string>
    <string name="communication_string">Communication</string>
    <string name="profile_ek2_string">Profile</string>
    <string name="settings_string">Settings</string>
    <string name="help_string">Help</string>
    <string name="grades_string">Grades</string>
    <string name="quizzes_ek2_string">Quizzes</string>
    <string name="schedule_string">Schedule</string>
    <string name="today_string">Today</string>
    <string name="mon_string">Mon</string>
    <string name="_20_string">20</string>
    <string name="mon_ek1_string">Tue</string>
    <string name="_20_ek1_string">21</string>
    <string name="mon_ek2_string">Wed</string>
    <string name="_20_ek2_string">22</string>
    <string name="mon_ek3_string">Thu</string>
    <string name="_20_ek3_string">23</string>
    <string name="mon_ek4_string">Fri</string>
    <string name="_20_ek4_string">24</string>
    <string name="math_string">Math</string>
    <string name="c05_string">C05</string>
    <string name="flen_el_fouleni_string">Flen el fouleni</string>
    <string name="_08_00_string">08:00</string>
    <string name="_08_00_ek1_string">08:00</string>
    <string name="math_ek1_string">Physics</string>
    <string name="c05_ek1_string">C05</string>
    <string name="flen_el_fouleni_ek1_string">Flen el fouleni</string>
    <string name="_08_00_ek2_string">08:00</string>
    <string name="_08_00_ek3_string">08:00</string>
    <string name="math_ek2_string">History</string>
    <string name="c05_ek2_string">C05</string>
    <string name="flen_el_fouleni_ek2_string">Flen el fouleni</string>
    <string name="_08_00_ek4_string">08:00</string>
    <string name="_08_00_ek5_string">08:00</string>
    <string name="math_ek3_string">Sports</string>
    <string name="c05_ek3_string">C05</string>
    <string name="flen_el_fouleni_ek3_string">Flen el fouleni</string>
    <string name="_08_00_ek6_string">08:00</string>
    <string name="_08_00_ek7_string">08:00</string>
    <string name="quizzes_ek3_string">Quizzes</string>
    <string name="courses_ek3_string">Courses</string>
    <string name="profile_ek3_string">Profile</string>
    <string name="discover_ek2_string">Discover</string>
    <string name="quizzes_ek4_string">Quizzes</string>
    <string name="quiz_1_string">Quiz 1</string>
    <string name="matrices_string">Matrices</string>
    <string name="button_ek7_string">Begin</string>
    <string name="quiz_1_ek1_string">Quiz 1</string>
    <string name="matrices_ek1_string">Matrices</string>
    <string name="button_ek8_string">Begin</string>
    <string name="quiz_1_ek2_string">Quiz 1</string>
    <string name="matrices_ek2_string">Matrices</string>
    <string name="button_ek9_string">Begin</string>
    <string name="quizzes_ek5_string">Quizzes</string>
    <string name="courses_ek4_string">Courses</string>
    <string name="profile_ek4_string">Profile</string>
    <string name="discover_ek3_string">Discover</string>
    <string name="_1_20_string">1/20</string>
    <string name="calculate_the_product_7_8_string"> Calculate the product 78</string>
    <string name="_40_string">40</string>
    <string name="_87_string">87</string>
    <string name="_36_string">36</string>
    <string name="_56_string">56</string>
    <string name="button_ek10_string">Continue</string>
    <string name="_100__string">100%</string>
    <string name="_20_of20_string">20 of20</string>
    <string name="you_are_awesome__string">You are awesome!</string>
    <string name="congratulations_for_getting_all_the_answers_correct__string">Congratulations for getting allthe answers correct!</string>
    <string name="physics_string">Physics</string>
    <string name="physics_fundamentals_string">Physics Fundamentals</string>
    <string name="_10_04_2024_string">10/04/2024</string>
    <string name="physics_fundamentals_ek1_string">Physics Fundamentals</string>
    <string name="add_new_announcement_string">Add new announcement</string>
    <string name="label_ek49_string">Title</string>
    <string name="label_ek50_string">Description</string>
    <string name="label_ek51_string">Upload Files</string>
    <string name="schedule___string">Schedule :</string>
    <string name="label_ek52_string">00/00/0000</string>
    <string name="label_ek53_string">00:00</string>
    <string name="button_ek26_string">Add</string>
    <string name="updates_ek11_string">Updates</string>
    <string name="stats_ek11_string">Stats</string>
    <string name="personnel_ek13_string">Personnel</string>
    <string name="school_ek11_string">School</string>
    <string name="classroom_1_ek4_string">Classroom 1</string>
    <string name="_28_student_ek14_string">28 Student</string>
    <string name="classroom_1_ek5_string">Classroom 1</string>
    <string name="_28_student_ek15_string">28 Student</string>
    <string name="classroom_1_ek6_string">Classroom 1</string>
    <string name="_28_student_ek16_string">28 Student</string>
    <string name="classrooms_string">Classrooms</string>
    <string name="academics_ek8_string">Academics</string>
    <string name="classroom_ek4_string">Classroom</string>
    <string name="profile_ek17_string">Profile</string>
    <string name="discover_ek16_string">Discover</string>
</resources>